jwt token 기능 추가 1. login후 발급되는 token을 이용하여 사용자 id 자동 식별 가능

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ server.address=0.0.0.0
 server.port=8080
 
 file.upload-dir=uploads
+
+jwt.secret=N2VmN2ZiY2EtMWI4ZS00YjYyLTk3NTMtMjVlMGY0YjJjMzFi
+jwt.expiration=3600000
